uploads/compilations/Class1.txt

Class1.java:3: error: unclosed character literal
    char[] chars ={'a','b','c
                           ^
Class1.java:3: error: ';' expected
    char[] chars ={'a','b','c
                             ^
Class1.java:4: error: reached end of file while parsing
}dazzz
      ^
3 errors
